# rocnikovy-projekt

./: .gitignore  CMakeLists.txt  CNF.cpp  CNF.h  Claus.cpp  Claus.h  Clause.cpp  Clause.h  Constr.cpp  Edge.h  Graph.cpp  Graph.h  History.cpp  History.h  HistoryEntry.cpp  HistoryEntry.h  Literal.cpp  Literal.h  Queue.cpp  README.md  ScaleFreeGraph.cpp  ScaleFreeGraph.h  Solver.cpp  Solver.h  VarOrder.h  Vector.cpp  Vector.h  claus.cpp  claus.h  data.csv  data2.csv  lbool.cpp  lbool.h  lit.h  main  main.cpp  plot.py
_layouts/: default.html
data/: data2.csv  data2_1.csv  data2_4.csv  data3.csv  data3_4.csv  data4_1.csv  data4_4.csv  data5_4.csv  data6_1.csv  data6_4.csv  plot.py
solver/: Clause.cpp  Clause.h  Constr.h  Queue.h  SearchParams.h  Solver.cpp  Solver.h  Vector.h  lbool.cpp  lbool.h  lit.cpp  lit.h
